Updated backend to support creating brands and cars
