# carsearch/src/main/java/com/cardb/carsearch/api/BrandController.java
@@ -1,13 +1,16 @@
 package com.cardb.carsearch.api;
 
 import com.cardb.carsearch.api.data.ApiCarBrand;
+import com.cardb.carsearch.api.data.ApiCreateCarBrand;
 import com.cardb.carsearch.service.BrandService;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
 @RestController
+@CrossOrigin
 public class BrandController implements BrandsApi {
 
     private final BrandService brandService;
@@ -26,4 +29,8 @@ public class BrandController implements BrandsApi {
         return ResponseEntity.ok(brandService.getBySlug(slug));
     }
 
+    @Override
+    public ResponseEntity<ApiCarBrand> createBrand(ApiCreateCarBrand apiCreateCarBrand) {
+        return ResponseEntity.status(HttpStatus.CREATED).body(brandService.create(apiCreateCarBrand));
+    }
 }
